# supravim-settings

./: .gitignore  Body.vala  Doc.vala  General.vala  Makefile  Parser.vala  gresource.xml  main.vala  meson.build  suprapack_build.sh  window.blp
data/: info.in  plugins-catalog.json
src/: ClearCacheWindow.vala  Color.vala  DataColor.vala  DialogPopup.vala  HomePage.vala  Markdown.vala  Options.vala  OptionsNode.vala  OptionsRow.vala  PluginExternalRow.vala  Plugins.vala  PluginsDownloadWindow.vala  PluginsPage.vala  PluginsRow.vala  SupraParser.vala  ThemeButton.vala  ThemeGrid.vala  Themes.vala  UninstallWindow.vala  UpdateWindow.vala  Utils.vala  WikiPage.vala  Window.vala  WindowClearCache.vala  WindowUninstall.vala  WindowUpdate.vala  main.vala  meson.build  window.vala
src/homepage/: Color.vala  HomePage.vala  ThemeGrid.vala  ThemeInit.vala  Themes.vala  meson.build
src/lsp/: LspPage.vala  LspRow.vala  SnippetsPage.vala  meson.build
src/options/: Options.vala  OptionsNode.vala  OptionsRow.vala  meson.build
src/plugins/: PluginCatalog.vala  PluginExternalRow.vala  PluginStoreRow.vala  PluginsPage.vala  PluginsRow.vala  meson.build
src/popup/: MagicPopup.vala  WindowUninstall.vala  WindowUpdate.vala  meson.build
src/stats/: StatsPage.vala  meson.build
src/utils/: SupraParser.vala  Utils.vala  meson.build
src/wiki/: WikiPage.vala  meson.build
subprojects/: gtk4-markdown.wrap
ui/: DialogPopup.blp  homepage.blp  lsp.blp  options.blp  plugins.blp  snippets.blp  stats.blp  style.css  theme.blp  wiki.blp  window.blp  window.ui
ui/plugins/: addexternalrow.blp  externalrow.blp
usr/: info
usr/share/applications/: supravim.desktop
usr/share/supravim-gui/: Astuce.md  Compilation.md  Customisation.md  Debug.md  HEADER.md  LSP.md  MultiCursor.md  Python,TypeScript,ASM-et-autre-langue.md  Raccourcis.md  Tags.md  Terminal.md  _sidebar.md  copilot.md  home.md
usr/share/supravim-gui/.gitlab/: redirects.yml
vapi/: libadwaita-1.vapi
